--- a/gb/24/3/12/n14200591.md
+++ b/gb/24/3/12/n14200591.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>桃园大大捐血嘉年华 戴永辉号召集团齐捐血</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/03/id14200592-669217-600x400.jpg" />
-<h6>桃园副市长苏俊宾前往中坜区，出席“大大携手 让爱汇流”捐血嘉年华。（南桃园有线电视公司提供）
-</h6>
+<h6>桃园副市长苏俊宾前往中坜区，出席“大大携手 让爱汇流”捐血嘉年华。（南桃园有线电视公司提供）</h6>
 <hr>
 <p>【大纪元2024年03月12日讯】（大纪元记者徐乃义台湾桃园报导）桃园副市长苏俊宾12日前往中坜区，出席“大大携手 让爱汇流”捐血嘉年华暨复康巴士捐赠仪式。苏俊宾表示，这段时间台湾面临血荒，最需要的就是热血，感谢大大数位基金会、南桃园有线电视及各协办单位共同合作，从北到南在6县市举办捐血活动，邀请大家卷起袖子捐出热血，12日桃园场阳光普照，相信能募集到更多爱心热血。</p>
 <figure id="14200593" aria-describedby="caption-14200593" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/03/id14200593-669218-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/03/id14200593-669218-450x300.jpg" alt="桃园副市长苏俊宾与大大数位基金会董事长戴永辉复康巴士合影。" width="500" /></a><figcaption id="caption-14200593" class="wp-caption-text">桃园副市长苏俊宾与大大数位基金会董事长戴永辉复康巴士合影。（南桃园有线电视公司提供）</figcaption></figure>
@@ -28,32 +27,32 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/15/n14158932.md#1">桃医挥毫义卖春联暨捐血活动及感恩捐赠仪式</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/18/n14160745.md#1">血液短缺 西北红十字会呼吁人们捐血</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/6/n14174588.md#1">寒冬送暖 部桃捐血献爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552593.md#1">黄敬平成功争取机捷21日起中坜端增开早班与深夜加班车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552598.md#1">早产儿点点出院 部桃展现最温暖的人道关怀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552561.md#1">方向盘中暑卡点路中央  中坜警线上推一把刚刚好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652494.md#1">桃园青农夺日本米食鉴定大赛世界首奖 二百万奖金表扬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652490.md#1">林美秀任创世爱心大使 呼吁支持第36届寒士吃饱30</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652473.md#1">桃市公车双巴转运提升计划 持续升级公共运输服务品质</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/21/n11128349.md#1" target="_blank">明白人：“纪念”“烧木炭”而死的张思德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/22/n11402499.md#1" target="_blank">法轮功阿根廷中领馆前反迫害 十年如一日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546330.md#1">邪不压正 秦王李世民一身浩气 断李渊迁都之念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550230.md#1">【军事情报局】海鲲号海试 中台印潜艇对比</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550145.md#1">【车评】感性省油轿跑 2025 Hyundai Sonata Hybrid Limited</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550275.md#1">【时事金扫描】川普关税大棒会打台湾吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548974.md#1">【军事情报局】购168门M109 台湾自走炮大升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549162.md#1">港铁工程引入大陆建造标准 引发安全担忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549301.md#1">组图：天文奇景 红色“雄鹿满月”如期登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549752.md#1">在内地被周星驰婉拒探班 港星黄一山吐露心声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549794.md#1">被酸没瘦多久就反弹 贾玲晒健身照打破传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550325.md#1">赵薇被牵涉缅北电诈 亲哥赵健发文怒控</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549817.md#1">郑欣宜退赛《歌手》后首露面 疑颈部伤痕曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550115.md#1">新版《超人》周四预映 票房收入2250万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550244.md#1">哈佛心理学家发现：彼此信任的伴侣常说七句话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550468.md#1">为何天气变化会引发偏头痛？ 如何缓解？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546470.md#1">睡眠时保持完全黑暗的益处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546818.md#1">髂腰肌紧绷引发腰痛 三招帮助放松</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14549995.md#1">为何替过去疗伤可能不会让你感到快乐？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/3/12/n14200591.htm">桃园大大捐血嘉年华 戴永辉号召集团齐捐血</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/3/12/n14200591.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
